# showbox

./: AGENTS.md  CMakeLists.txt  Makefile  integration_test.sh  verify_visuals.sh
.context/plans/: desenvolvimento-showbox.md
.github/workflows/: ci.yml
.trunk/: trunk.yaml
docs/: Gerenciar_Projeto_Conductor.md  dialogbox-reference.md  index.md  status-implementacao.md  troubleshooting.md
docs/architecture/: REFACTORING_STRATEGY.md
docs/examples/: 02-formulario-login.md  03-painel-controle.md  04-tabela-dados.md  05-grafico-dinamico.md  README.md
examples/: demo1_compat.sh  demo2_compat.sh  integration_test.sh  showbox_calendar.sh  showbox_charts.sh  showbox_icons.sh  showbox_listbox.sh  showbox_page.sh  showbox_painel_icon.sh  showbox_progressbar.sh  showbox_pushbutton.sh  showbox_separator.sh  showbox_sidebar_tabs.sh  showbox_slider.sh  showbox_table.sh  showbox_tabs.sh  showbox_textbox.sh  showbox_textview.sh  showbox_themes.sh  test_all_widgets.sh  test_script.sbx
examples/demos/: demo1  demo1_compat.sh  demo2  demo2_compat.sh  demo3  demo4  demo5  samba_config_demo.sh  test_actions.sh  test_calendar.sh  test_debian_structure.sh  test_help_output.sh  test_man_source.sh  test_v2.sh  visual_layout_test.sh  widget_types_demo.sh  zfs-dashboard.sh
libs/showbox-ui/: CMakeLists.txt
libs/showbox-ui/include/: IShowboxBuilder.h  ShowboxBuilder.h  WidgetConfigs.h  custom_chart_widget.h  custom_table_widget.h  icon_helper.h  logger.h  theme_manager.h  widget_factory.h
libs/showbox-ui/src/: ShowboxBuilder.cpp  custom_chart_widget.cpp  logger.cpp  placeholder.cpp  theme_manager.cpp  widget_factory.cpp
man/: README.md  showbox.md
packaging/: README.md
packaging/appimage/: appimage.Dockerfile  build.sh  start-pkg-appimage.sh
packaging/deb/: build.sh  debian.Dockerfile  start-pkg-deb.sh  ubuntu.Dockerfile
packaging/deb/debian/: changelog  control  copyright  rules
packaging/flatpak/: build.sh  io.github.showbox.desktop  io.github.showbox.metainfo.xml  io.github.showbox.yaml
packaging/rpm/: build.sh  showbox.desktop  showbox.spec
src/: README.md  dev.Dockerfile  poc_modern_cli.cpp  start-dev.sh  visual_verifier.cpp
src/code/showbox/: CMakeLists.txt  Makefile  dialog_main.cc  dialog_parser.cc  dialog_set_options.cc  dialog_slots.cc  icon_helper.cpp  main.cpp  showbox.h  showbox.pro
src/code/showbox/commands/: AGENTS.md  add_command.cpp  position_command.cpp  position_command.h  simple_commands.cpp  unset_command.cpp  unset_command.h
src/code/showbox/core/builder/: CLIBuilder.cpp  CLIBuilder.h
src/code/showbox/core/parser/: CommandParser.cpp  CommandParser.h  ParserMain.cpp  ParserMain.h  Tokenizer.cpp  Tokenizer.h  WidgetParserUtils.cpp  WidgetParserUtils.h
src/code/showbox/legacy/v2_incomplete/: command.h  command_registry.cpp  command_registry.h  execution_context.cpp  execution_context.h  parser.cpp  parser.h  parser_driver.cpp  parser_driver.h  tokenizer.cpp  tokenizer.h
src/code/showbox/legacy/v2_incomplete/commands/: add_command.cpp  add_command.h  command_utils.cpp  command_utils.h  position_command.cpp  position_command.h  query_command.cpp  query_command.h  set_command.cpp  set_command.h  simple_commands.cpp  simple_commands.h  unset_command.cpp  unset_command.h
tests/: CMakeLists.txt  README.md  v2_features_test.sh
tests/auto/: Makefile  commands.pro  target_wrapper.sh  tst_clibuilder.cpp  tst_commands.cpp  tst_interface_builder.cpp  tst_parser.cpp  tst_showbox_builder.cpp  tst_units  tst_units.cpp  tst_units.moc  tst_widget_configs.cpp  tst_widgetfactory.cpp  units.pro
tests/manual/: compare_v1_vs_target.sh  test_compatibility.sh
tools/: README.md
